BJS2-85858 Убрал дублирующийся код, оптимизировал логику выборки